--- a/Graduation/css/bootstrap_styles.css
+++ b/Graduation/css/bootstrap_styles.css
@@ -7,7 +7,11 @@
 */
 
 * {
-    max-width: 99vw;
+    max-width: 99.9vw;
+}
+
+.debug-box {
+    border: 3px solid hotpink !important;
 }
 
 body,
@@ -17,6 +21,7 @@ html {
     max-width: 100vw;
     background-color: #1b1c1e;
     color: #fff;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -128,6 +133,19 @@ h6 {
     font-weight: 700
 }
 
+.banner {
+    position: relative;
+}
+
+.banner .banner-tagline {
+    /* border: 1px solid lime; */
+    color: #1b1c1e;
+    position: absolute;
+    z-index: 8;
+    top: 16rem;
+    right: 15rem;
+}
+
 .text-faded {
     color: rgba(255, 255, 255, .7)
 }
@@ -182,8 +200,6 @@ h6 {
     height: auto;
     padding-top: 8rem;
     padding-bottom: 8rem;
-    background: linear-gradient(90deg, rgba(150, 88, 160, 1) 0, rgba(219, 153, 123, 1) 100%);
-    background-image: url(bg.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: auto
@@ -369,7 +385,6 @@ footer a:hover i {
     display: flex;
     height: 100%;
     width: 100%;
-    background-color: rgba(33, 37, 41, .2);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -377,7 +392,6 @@ footer a:hover i {
 }
 
 .portfolio-item .caption .caption-content {
-    color: #fff;
     margin: auto 2rem 2rem
 }
 
@@ -408,7 +422,7 @@ footer a:hover i {
     }
 
     .portfolio-item .caption .caption-content {
-        transition: opacity .3s;
+        transition: opacity .5s;
         margin-left: 3rem;
         margin-right: 3rem;
         margin-bottom: 3rem;
@@ -417,7 +431,8 @@ footer a:hover i {
     }
 
     .portfolio-item:hover .caption .caption-content {
-        transition: all .3s ease;
+        color: #1b1c1e;
+        transition: all .5s ease;
         margin-left: 3rem;
         margin-right: 3rem;
         margin-bottom: 5rem;
@@ -431,7 +446,7 @@ footer a:hover i {
     }
 
     .portfolio-item:hover .caption {
-        background-color: rgba(29, 128, 159, .9);
+        background-color: rgba(255, 229, 0, .9);
         -webkit-clip-path: inset(2rem);
         clip-path: inset(2rem)
     }
@@ -455,7 +470,7 @@ footer a:hover i {
     }
 
     .portfolio-item:hover .caption .caption-content {
-        transition: all .3s ease;
+        transition: all .5s ease;
         margin-left: 3rem;
         margin-right: 3rem;
         margin-bottom: 5rem;
@@ -468,7 +483,8 @@ footer a:hover i {
     }
 
     .portfolio-item:hover .caption {
-        background-color: rgba(29, 128, 159, .9);
+        background-color: rgba(255, 229, 0, .9);
+        color: #000;
         -webkit-clip-path: inset(2rem);
         clip-path: inset(2rem)
     }
@@ -494,7 +510,7 @@ footer a:hover i {
     }
 
     .portfolio-item:hover .caption .caption-content {
-        transition: all .3s ease;
+        transition: all .5s ease;
         margin-left: 3rem;
         margin-right: 3rem;
         margin-bottom: 3.5rem;
@@ -1338,36 +1354,6 @@ h6 {
     font-weight: 800
 }
 
-.masthead {
-    min-height: 30rem;
-    position: relative;
-    display: table;
-    width: 100%;
-    height: auto;
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-    background: linear-gradient(90deg, rgba(150, 88, 160, 1) 0, rgba(219, 153, 123, 1) 100%);
-    background-image: url(bg.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: auto
-}
-
-.masthead h1 {
-    font-size: 4rem;
-    margin: 0;
-    padding: 0
-}
-
-@media (min-width:992px) {
-    .masthead {
-        height: 100vh
-    }
-
-    .masthead h1 {
-        font-size: 5.5rem
-    }
-}
 
 #sidebar-wrapper {
     position: fixed;
@@ -1521,154 +1507,6 @@ footer a:hover i {
     max-width: 30rem
 }
 
-.portfolio-item {
-    display: block;
-    position: relative;
-    overflow: hidden;
-    max-width: 530px;
-    margin: auto auto 1rem
-}
-
-.portfolio-item .caption {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(33, 37, 41, .2);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    z-index: 1
-}
-
-.portfolio-item .caption .caption-content {
-    color: #fff;
-    margin: auto 2rem 2rem
-}
-
-.portfolio-item .caption .caption-content .h2 {
-    font-size: 2.4rem;
-    font-weight: 700;
-    text-transform: uppercase
-}
-
-.portfolio-item .caption .caption-content p {
-    font-weight: 300;
-    font-size: 1.1rem;
-    font-weight: 600;
-}
-
-@media (min-width:992px) {
-    .portfolio-item {
-        max-width: none;
-        margin: 0
-    }
-
-    .portfolio-item .caption {
-        transition: background-color .7s, -webkit-clip-path .25s ease-out;
-        transition: clip-path .25s ease-out, background-color .7s;
-        transition: clip-path .25s ease-out, background-color .7s, -webkit-clip-path .25s ease-out;
-        -webkit-clip-path: inset(0);
-        clip-path: inset(0)
-    }
-
-    .portfolio-item .caption .caption-content {
-        transition: opacity .3s;
-        margin-left: 3rem;
-        margin-right: 3rem;
-        margin-bottom: 3rem;
-        width: 80%;
-        opacity: 70%;
-    }
-
-    .portfolio-item:hover .caption .caption-content {
-        transition: all .3s ease;
-        margin-left: 3rem;
-        margin-right: 3rem;
-        margin-bottom: 5rem;
-        width: 80%;
-        opacity: 100%;
-    }
-
-    .portfolio-item:hover img {
-        -webkit-clip-path: inset(2rem);
-        clip-path: inset(2rem)
-    }
-
-    .portfolio-item:hover .caption {
-        background-color: rgba(29, 128, 159, .9);
-        -webkit-clip-path: inset(2rem);
-        clip-path: inset(2rem)
-    }
-}
-
-@media (max-width:992px) {
-    .portfolio-item .caption .caption-content {
-        transition: opacity .25s;
-        margin-left: 3rem;
-        margin-right: 3rem;
-        margin-bottom: 3rem;
-        opacity: 70%;
-    }
-
-    .portfolio-item img {
-        transition: -webkit-clip-path .25s ease-out;
-        transition: clip-path .25s ease-out;
-        transition: clip-path .25s ease-out, -webkit-clip-path .25s ease-out;
-        -webkit-clip-path: inset(-1px);
-        clip-path: inset(-1px)
-    }
-
-    .portfolio-item:hover .caption .caption-content {
-        transition: all .3s ease;
-        margin-left: 3rem;
-        margin-right: 3rem;
-        margin-bottom: 5rem;
-        opacity: 100%;
-    }
-
-    .portfolio-item:hover img {
-        -webkit-clip-path: inset(2rem);
-        clip-path: inset(2rem)
-    }
-
-    .portfolio-item:hover .caption {
-        background-color: rgba(29, 128, 159, .9);
-        -webkit-clip-path: inset(2rem);
-        clip-path: inset(2rem)
-    }
-}
-
-@media (max-width:458px) {
-
-    .portfolio-item .caption .caption-content p {
-        font-size: 90% !important;
-    }
-
-    .portfolio-item .caption .caption-content .h2 {
-        font-size: 25pt !important;
-    }
-
-    .portfolio-item .caption .caption-content {
-        transition: opacity .25s;
-        margin-left: 3rem;
-        margin-right: 3rem;
-        margin-bottom: 2rem;
-        width: 100%;
-        opacity: 70%;
-    }
-
-    .portfolio-item:hover .caption .caption-content {
-        transition: all .3s ease;
-        margin-left: 3rem;
-        margin-right: 3rem;
-        margin-bottom: 3.5rem;
-        opacity: 100%;
-    }
-
-    .portfolio-item:hover .caption .caption-content .h2 {
-        opacity: 0%;
-    }
-}
 
 .map iframe {
     height: 100%;
@@ -1712,7 +1550,7 @@ a {
 a:active,
 a:focus,
 a:hover {
-    color: #1d809f
+    color: #ccb800;
 }
 
 .btn-primary {
